--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,27 +1,23 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Users</h1>
+<div style="border: 2px solid pink;width: 400px;height: 400px;margin-top: 100px;margin-left: 100px;">
+    <h3 style="margin-left: 150px;">Latest Orders</h3>
 
-<table>
-  <thead>
-    <tr>
-      <th>Username</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.username %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+    <% @user.orders.each do |order| %>
+      <p>
+        <%= order.order_type  %>  on <%= order.created_at  %>
+        <br>
+      </p>
     <% end %>
-  </tbody>
-</table>
 
-<br>
+</div>
 
-<%= link_to 'New User', new_user_path %>
+
+<div style="border: 2px solid pink;width: 400px;height: 400px;float: right;margin-top: -400px;margin-right: 300px;">
+    <h3 style="margin-left: 150px;">Friends Activity</h3>
+
+
+
+
+
+</div>
