add login with fb link

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -32,3 +32,8 @@
 <% end %>
 
 <%= render "users/shared/links" %>
+
+
+<br><br>
+<!-- #link to facebook -> shrouk -->
+<a style="color:red;" rel="nofollow" data-method="get" href="/users/auth/facebook">Sign In With FB </a>
