--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,7 +16,11 @@
 <div style="border: 2px solid pink;width: 400px;height: 400px;float: right;margin-top: -400px;margin-right: 300px;">
     <h3 style="margin-left: 150px;">Friends Activity</h3>
 
-
+    <ul>
+	  <% for user in @user.friends %>
+	  <li><%= h user.username %></li>
+	  <% end %>  
+	</ul>
 
 
 
