--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>User:</strong>
-  <%= @group.user %>
+  <%= @group.users %>
 </p>
 
 <%= link_to 'Edit', edit_group_path(@group) %> |
