--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,11 @@
 <body>
 
 	<% if user_signed_in? %>      
-        <h3><a  data-method="get" href="/users">Home</a></h3>
-        <h3><a  data-method="get" href="">Friends</a></h3>
-        <h3><a  data-method="get" href="">Groups</a></h3>
-        <h3><a  data-method="get" href="">Orders</a></h3>
-		<h3><a data-confirm="Are you sure?" rel="nofollow" data-method="delete" href="/users/sign_out">Logout</a></h3>
+      <b> <a  data-method="get" href="/users">Home</a> || </b>
+      <b> <a  data-method="get" href="">Friends</a> || </b>
+      <b> <a  data-method="get" href="">Groups</a> || </b>
+      <b> <a data-method="get" href="">Orders</a> </b>
+    <b><a  style='margin-left:700px' data-confirm="Are you sure?" rel="nofollow" data-method="delete" href="/users/sign_out">Logout</a></b>
 	<% else %>
 		<h3><a rel="nofollow" data-method="get" href="/users/sign_in">Sign In</a></h3>        
         <h3><a rel="nofollow" data-method="get" href="/users/sign_up">Sign Up</a></h3>     
