--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,5 +1,50 @@
-<h1>New Order</h1>
+<h1 style="margin-left: 20px;">Add Order</h1>
+<%= form_for(@order) do |f| %>
+  <% if @order.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@order.errors.count, "error") %> prohibited this order from being saved:</h2>
 
-<%= render 'form' %>
+      <ul>
+      <% @order.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+  <div style="width: 500px;height: 400px;margin-top: 20px;margin-left: 20px;">
+	  <div class="field">
+	    <%= f.label :Orde_type %>
+	    <%= f.select :order_type, [ 'lunch','BreakFast','Dinner' ], :prompt => 'Select One'%>
+	  </div>
+	  <div class="field">
+	  	<h3>Write the resturant name: </h3>
+	    <%= f.label :From%>
+	    <%= f.text_field :restaurant %>
+	  </div>
+	  <div class="field">
+	  	<h3>You can write afriend name or agroup: </h3>
+	    <%= f.label :Friends%>
+	    <%= f.text_field :user_id %>
+	  </div>
+	  <div class="field">
+	    <%= f.label :Menue_Image %>
+	    <%= f.file_field :menu_image %>
+	  </div>
+	  <div class="actions">
+	    <%= f.submit %>
+	  </div>
+</div>
 
-<%= link_to 'Back', orders_path %>
+<div style="border: 2px solid pink;width: 600px;height: 400px;float: right;margin-top: -400px;margin-right: 300px;">
+    <h3 style="margin-left: 150px;">Friends Invited</h3>
+
+
+
+
+
+</div>
+<% end %>
+
+
+
+<%= link_to "Back", :back %>
