--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -107,8 +107,8 @@
 	         <li><a href="#">Contact</a></li>
 	         <li><a data-method="delete" href="/users/sign_out">Logout</a></li>
 	         <% else %>
-				<h3><a rel="nofollow" data-method="get" href="/users/sign_in">Sign In</a></h3>        
-		        <h3><a rel="nofollow" data-method="get" href="/users/sign_up">Sign Up</a></h3>     
+				<li><a rel="nofollow" data-method="get" href="/users/sign_in">Sign In</a></li>        
+		        <li><a rel="nofollow" data-method="get" href="/users/sign_up">Sign Up</a></li>     
 		    <% end %>
 	      </ul> 
 	      
