--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -1,6 +1,43 @@
-<h1>Editing Order</h1>
+ <div class=" container">
+<h1 style="font-family:Times New Roman"> Finishing Order </h1>
 
-<%= render 'form' %>
+<%= form_for(@order) do |f| %>
+  <% if @order.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@order.errors.count, "error") %> prohibited this order from being saved:</h2>
+
+      <ul>
+      <% @order.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+ 
+ 
+ 
+  
+ 
+   <div class="form-group">
+    <%= f.label :Status %><br>
+    
+    <% if @order.status == 'finish' %>
+    
+    <%= f.text_field :status, :value =>'waiting' %>
+    <% elsif %>
+    <%= f.text_field :status, :value =>'finish' %>
+    <% else %>
+    <%= f.text_field :status  %>
+    <% end %>
+    </br> </br>
+    </div>
+  
+  <div class="actions ">
+    <%= f.submit %>
+
+  </div>
+<% end %>
 
 <%= link_to 'Show', @order %> |
 <%= link_to 'Back', orders_path %>
