--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -36,9 +36,14 @@
   </div>
 <% end %>
 
-<%= render "users/shared/links" %>
-
-
 <br><br>
+
+
+
+<a style="color:red;" rel="nofollow" data-method="get" href="/users/sign_in">Sign In </a>
+<br>
 <!-- #link to facebook -> shrouk -->
-<a style="color:red;" rel="nofollow" data-method="get" href="/users/auth/facebook">Sign In With FB </a>
+<a style="color:red;" rel="nofollow" data-method="get" href="/users/auth/facebook">Sign In With Facebook </a>
+<br>
+<!-- #link to google -> shrouk -->
+<a style="color:red;" rel="nofollow" data-method="get" href="/users/auth/google_oauth2">Sign In With Google </a>
