--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -7,7 +7,10 @@
   <% if friendship.friend.name %>
   <li>
     <%= h friendship.friend.name %>
-    (<%= link_to "remove", friendship, :method => :delete %>)
+    <span class="btn btn-danger">
+    <i style="color:black;margin-left: 20px;"><%= link_to "remove", friendship, :method => :delete %>
+    </span>
+    <br>
   </li>
   <% end %>
 
