--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -10,31 +10,28 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :price %><br>
-    <%= f.text_field :price %>
-  </div>
-  <div class="field">
-    <%= f.label :amount %><br>
-    <%= f.number_field :amount %>
-  </div>
-  <div class="field">
-    <%= f.label :comment %><br>
-    <%= f.text_area :comment %>
-  </div>
-  <div class="field">
-    <%= f.label :order_id %><br>
-    <%= f.text_field :order_id %>
-  </div>
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.text_field :user_id %>
-  </div>
+  <table>
+    <thead>
+      <tr>
+        <th><%= f.label :name %></th>
+        <th><%= f.label :amount %></th>
+        <th><%= f.label :price %></th>
+        <th><%= f.label :comment %></th>
+        <th><%= f.label :order_id %></th>
+        <th><%= f.label :user_id %></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td><%= f.text_field :name %></td>
+        <td><%= f.number_field :amount %></td>
+        <td><%= f.text_field :price %></td>
+        <td><%= f.text_area :comment %></td>
+        <td><%= f.text_field :order_id %></td>
+        <td><%= f.text_field :user_id %></td>
+      </tr>
+    </tbody>
+  </table>
   <div class="actions">
     <%= f.submit %>
   </div>
