--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,5 +1,79 @@
-<h1>New Item</h1>
+<div style="font-size:20px;border: 4px ;width:50%;height: 10%;marigin-left:60%">
+<p id="notice"><%= notice %></p>
 
-<%= render 'form' %>
 
-<%= link_to 'Back', items_path %>
+<table class="table" style="font-size:20px;border:4px solid purple;padding:3%;margin:10%">
+  <thead>
+    <tr style="padding:10%;" >
+      <th>User</th>
+      <th>Name</th>
+      <th>Amount</th>
+      <th>Price</th>
+      <th>Comment</th>
+      <!-- <th>Order</th> -->
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody >
+    <% @items.each do |item| %>
+      <tr>
+      <td><%= item.user_id %></td>
+        <td><%= item.name %></td>
+        <td><%= item.amount %></td>
+        <td><%= item.price %></td>
+        <td><%= item.comment %></td>
+        
+        <td class="btn btn-danger"><%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+</div>
+<!-- fooooooooooooooooooooorm -->
+<%= form_for(@item) do |f| %>
+  <% if @item.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@item.errors.count, "error") %> prohibited this item from being saved:</h2>
+
+      <ul>
+      <% @item.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+  <table style="margin:20px" cellpadding="10">
+    <thead>
+      <tr>
+        <th><%= f.label :name %></th>
+        <th><%= f.label :amount %></th>
+        <th><%= f.label :price %></th>
+        <th><%= f.label :order_id %></th>
+        <th><%= f.label :comment %></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td><%= f.text_field :name %>&nbsp;&nbsp;</td>
+        <td><%= f.number_field :amount %>&nbsp;&nbsp;</td>
+        <td><%= f.text_field :price %>&nbsp;&nbsp;</td>
+        <td><%= f.text_field :order_id %>&nbsp;&nbsp;</td>
+        <td><%= f.text_area :comment %>&nbsp;&nbsp;</td>
+        <td><%= f.hidden_field :user_id,:value => current_user.id %>&nbsp;&nbsp;</td>
+      </tr>
+    </tbody>
+    <!-- invitations -->
+    <div>
+     
+    </div>
+  </table>
+  <div class="actions">
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= f.submit %>
+  </div>
+<% end %>
+
+
+
