--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
 <head>
   <title>Yalanotlob</title>
@@ -6,156 +6,345 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 
-  
+  <%= stylesheet_link_tag "bootstrap.css" %>
+  <%= stylesheet_link_tag "style.css" %>
+  <%= stylesheet_link_tag "font-awesome.css" %>
+  <%= stylesheet_link_tag "icon-font.min.css" %>
 
-  	<%= stylesheet_link_tag "bootstrap.css" %>
-  	<%= stylesheet_link_tag "style.css" %>
-  	
-	  	<style>
-			#notice_wapper{
+  <style>
+  		.header_top{
 
-				position:absolute;
-				top:0;
-				width:100%;
-				z-index:999;
-				background-color:yellow;
-			}
-			.alert, .notice{
-				padding:2.5rem 0;
-				text-align:center;
-				margin:0;
-				font-size:1.5rem;
-				font-weight:700;
-				color:#FFFFFF;
-				letter-spacing: 1px;
-			}
+  			height:50px;
+  		}
 
-      #brand{
+  </style>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="keywords" content="Gretong Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
+Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+<!-- Bootstrap Core CSS -->
 
-            /*display: block;*/
-            margin-left: 20px;
-            margin-top: 46px;
-        }
+<!-- lined-icons -->
 
+<!-- //lined-icons -->
 
-		</style>
-
-
-  	</head>
-
-
-
-<body style="background-color:#e0e064;">
-<script>
-		
-	$(document).ready(function() {
-		setTimeout(function(){
-
-			$('#notice_wapper').fadeOut('slow', function() {
+<%= javascript_include_tag "amcharts.js" %>
+<%= javascript_include_tag "serial.js" %>
+<%= javascript_include_tag "light.js" %>
+   
+	<div class="left-content">
+	   <div class="inner-content">
+		<!-- header-starts -->
+			<div class="header-section">
+			<!-- top_bg -->
+						<div class="top_bg">
+							
+								<div class="header_top">
+									<div class="top_right">
+										<ul>
+											<li><a href="contact.html">help</a></li>|
+											<li><a href="contact.html">Contact</a></li>|
+											<li><a href="checkout.html">Delivery information</a></li>
+										</ul>
+									</div>
+									<div class="top_left">
+										<h2><span></span> Call us : 032 2352 782</h2>
+									</div>
+										<div class="clearfix"> </div>
+								</div>
+							
+						</div>
+					<div class="clearfix"></div>
+				<!-- /top_bg -->
+				</div>
+								
 				
-				$(this).remove()
+				<!--content-->
+			<div id="yeild" style="margin-left: 100px; margin-top: 50px;">
+				<%= yield %>	
+			</div>
+				
+					<div class="clearfix"></div>
+				</div>
+						<!--//area-->
+		
+			</div>
+			<!--content-->
+		</div>
+</div>
+				<!--//content-inner-->
+			<!--/sidebar-menu-->
+				<div class="sidebar-menu">
+					<header class="logo1">
+						<button class="sidebar-icon"> <span class="fa fa-bars"></span> </button> 
+					</header>
+						<div style="border-top:1px ridge rgba(255, 255, 255, 0.15)"></div>
+                           <div class="menu">
+									<ul id="menu" >
+									<% if user_signed_in? %>
+										<li><a href="/users"><i class="fa fa-tachometer"></i> <span>Home</span></a></li>
+										<li><a href="/friendships"><i class="fa fa-tachometer"></i> <span>Friends</span></a></li>
+										<li><a href="/groups/new"><i class="fa fa-tachometer"></i> <span>Groups</span></a></li>
+										<li><a href="/orders"><i class="fa fa-tachometer"></i> <span>Orders</span></a></li>
+										<li><a data-method="delete" href="/users/sign_out"><i class="fa fa-tachometer"></i><span>Sign Out</span></a></li>
+									<% else %>
+										<li><a href="/users/sign_in"><span>Sign In</span></a></li>
+										<li><a href="/users/sign_up"><span>Sign Up</span></a></li>
+									<% end %>
+								  </ul>
+								</div>
+							  </div>
+							  <div class="clearfix"></div>		
+							</div>
+							<script>
+							var toggle = true;
+										
+							$(".sidebar-icon").click(function() {                
+							  if (toggle)
+							  {
+								$(".page-container").addClass("sidebar-collapsed").removeClass("sidebar-collapsed-back");
+								$("#menu span").css({"position":"absolute"});
+							  }
+							  else
+							  {
+								$(".page-container").removeClass("sidebar-collapsed").addClass("sidebar-collapsed-back");
+								setTimeout(function() {
+								  $("#menu span").css({"position":"relative"});
+								}, 400);
+							  }
+											
+											toggle = !toggle;
+										});
+							</script>
+<!--js -->
+<%= javascript_include_tag "jquery.nicescroll.js" %>
+<%= javascript_include_tag "scripts.js" %>
+
+<!-- Bootstrap Core JavaScript -->
+<%= javascript_include_tag "bootstrap.min.js" %>
+ 
+   <!-- /Bootstrap Core JavaScript -->
+   <!-- real-time -->
+
+   <%= javascript_include_tag "jquery.flot.js" %>
+ 	
+
+	<script type="text/javascript">
+
+	$(function() {
+
+		// We use an inline data source in the example, usually data would
+		// be fetched from a server
+
+		var data = [],
+			totalPoints = 300;
+
+		function getRandomData() {
+
+			if (data.length > 0)
+				data = data.slice(1);
+
+			// Do a random walk
+
+			while (data.length < totalPoints) {
+
+				var prev = data.length > 0 ? data[data.length - 1] : 50,
+					y = prev + Math.random() * 10 - 5;
+
+				if (y < 0) {
+					y = 0;
+				} else if (y > 100) {
+					y = 100;
+				}
+
+				data.push(y);
+			}
+
+			// Zip the generated y values with the x values
+
+			var res = [];
+			for (var i = 0; i < data.length; ++i) {
+				res.push([i, data[i]])
+			}
+
+			return res;
+		}
+
+		// Set up the control widget
+
+		var updateInterval = 30;
+		$("#updateInterval").val(updateInterval).change(function () {
+			var v = $(this).val();
+			if (v && !isNaN(+v)) {
+				updateInterval = +v;
+				if (updateInterval < 1) {
+					updateInterval = 1;
+				} else if (updateInterval > 2000) {
+					updateInterval = 2000;
+				}
+				$(this).val("" + updateInterval);
+			}
+		});
+
+		var plot = $.plot("#placeholder", [ getRandomData() ], {
+			series: {
+				shadowSize: 0	// Drawing is faster without shadows
+			},
+			yaxis: {
+				min: 0,
+				max: 100
+			},
+			xaxis: {
+				show: false
+			}
+		});
+
+		function update() {
+
+			plot.setData([getRandomData()]);
+
+			// Since the axes don't change, we don't need to call plot.setupGrid()
+
+			plot.draw();
+			setTimeout(update, updateInterval);
+		}
+
+		update();
+
+		// Add the Flot version string to the footer
+
+		$("#footer").prepend("Flot " + $.plot.version + " &ndash; ");
+	});
+
+	</script>
+<!-- /real-time -->
+<%= javascript_include_tag "jquery.fn.gantt.js" %>
+
+    <script>
+
+		$(function() {
+
+			"use strict";
+
+			$(".gantt").gantt({
+				source: [{
+					name: "Sprint 0",
+					desc: "Analysis",
+					values: [{
+						from: "/Date(1320192000000)/",
+						to: "/Date(1322401600000)/",
+						label: "Requirement Gathering", 
+						customClass: "ganttRed"
+					}]
+				},{
+					name: " ",
+					desc: "Scoping",
+					values: [{
+						from: "/Date(1322611200000)/",
+						to: "/Date(1323302400000)/",
+						label: "Scoping", 
+						customClass: "ganttRed"
+					}]
+				},{
+					name: "Sprint 1",
+					desc: "Development",
+					values: [{
+						from: "/Date(1323802400000)/",
+						to: "/Date(1325685200000)/",
+						label: "Development", 
+						customClass: "ganttGreen"
+					}]
+				},{
+					name: " ",
+					desc: "Showcasing",
+					values: [{
+						from: "/Date(1325685200000)/",
+						to: "/Date(1325695200000)/",
+						label: "Showcasing", 
+						customClass: "ganttBlue"
+					}]
+				},{
+					name: "Sprint 2",
+					desc: "Development",
+					values: [{
+						from: "/Date(1326785200000)/",
+						to: "/Date(1325785200000)/",
+						label: "Development", 
+						customClass: "ganttGreen"
+					}]
+				},{
+					name: " ",
+					desc: "Showcasing",
+					values: [{
+						from: "/Date(1328785200000)/",
+						to: "/Date(1328905200000)/",
+						label: "Showcasing", 
+						customClass: "ganttBlue"
+					}]
+				},{
+					name: "Release Stage",
+					desc: "Training",
+					values: [{
+						from: "/Date(1330011200000)/",
+						to: "/Date(1336611200000)/",
+						label: "Training", 
+						customClass: "ganttOrange"
+					}]
+				},{
+					name: " ",
+					desc: "Deployment",
+					values: [{
+						from: "/Date(1336611200000)/",
+						to: "/Date(1338711200000)/",
+						label: "Deployment", 
+						customClass: "ganttOrange"
+					}]
+				},{
+					name: " ",
+					desc: "Warranty Period",
+					values: [{
+						from: "/Date(1336611200000)/",
+						to: "/Date(1349711200000)/",
+						label: "Warranty Period", 
+						customClass: "ganttOrange"
+					}]
+				}],
+				navigate: "scroll",
+				scale: "weeks",
+				maxScale: "months",
+				minScale: "days",
+				itemsPerPage: 10,
+				onItemClick: function(data) {
+					alert("Item clicked - show some details");
+				},
+				onAddClick: function(dt, rowId) {
+					alert("Empty space clicked - add an item!");
+				},
+				onRender: function() {
+					if (window.console && typeof console.log === "function") {
+						console.log("chart rendered");
+					}
+				}
 			});
 
-		},4000);
+			$(".gantt").popover({
+				selector: ".bar",
+				title: "I'm a popover",
+				content: "And I'm the content of said popover.",
+				trigger: "hover"
+			});
 
-	});
-</script>
+			prettyPrint();
 
+		});
 
-<% if notice %>
-	<div id="notice_wapper">
-	<p class="notice"><%= notice %></p>
-	<p class="notice"> Hellow</p>
-	</div>
-<% elsif alert %>
-	<div id="notice_wapper">
-	<p class="alert"><%= alert %></p>
-		
-	</div>	
-<% end %>
+    </script>
 
-
-
-
-
-<!-- Start Navbar	 -->
-	 
-	
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-	  <div class="container">
-	    <!-- Brand and toggle get grouped for better mobile display -->
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-	        <span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>
-	      
-	      <a  class="navbar-brand" href="#"><span id="brand"><%= image_tag("1.jpg", :alt => "rss feed") %></span></a>
-	    </div>
-
-	    <!-- Collect the nav links, forms, and other content for toggling -->
-	   
-	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	      <ul class="nav navbar-nav navbar-right">
-	      <% if user_signed_in? %>   
-	      <li><a data-method="get" href="#"><%= current_user.name %></a></li>
-	        <li class="active"><a data-method="get" href="/users">Home <span class="sr-only">(current)</span></a></li>
-	        <li><a data-method="get" href="/friendships">Friends</a></li>
-	         <li><a data-method="get" href="/groups/new">Groups</a></li>
-           <li><a data-method="get" href="/orders">Orders</a></li>
-	         <li><a href="#">Contact</a></li>
-	         <li><a data-method="delete" href="/users/sign_out">Logout</a></li>
-	         <% else %>
-				<li><a rel="nofollow" data-method="get" href="/users/sign_in">Sign In</a></li>        
-		        <li><a rel="nofollow" data-method="get" href="/users/sign_up">Sign Up</a></li>     
-		    <% end %>
-	      </ul> 
-	      
-	    </div><!-- /.navbar-collapse -->
-	  </div><!-- /.container-fluid -->
-	</nav>
-	<!-- End Navbar	 -->
-
-	<!-- start Slider -->
-
-	<div id="myslide" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myslide" data-slide-to="0" class="active"></li>
-    <li data-target="#myslide" data-slide-to="1"></li>
-    <!-- <li data-target="#myslide" data-slide-to="2"></li> -->
-    <!-- <li data-target="#myslide" data-slide-to="3"></li> -->
-  </ol>
-
-  <!-- Wrapper for slides -->
-		  <div class="carousel-inner" role="listbox">
-		    <div class="item active">
-		      <%= image_tag("4.jpg", :alt => "rss feed") %>
-		    </div>
-		    
-		     <div class="item">
-		     <%= image_tag("6.jpg", :alt => "rss feed") %>		  
-		    </div>
-
-
-		  </div>
-
-		  <!-- Controls -->
-		 
-		</div>
-	
-	<!-- End Slider -->
-	
-	
-<%= yield %>
-
-	
-	<%= javascript_include_tag "jquery-1.12.0.min.js" %>
+    <%= javascript_include_tag "jquery-1.12.0.min.js" %>
 	<%= javascript_include_tag "bootstrap.min.js" %>
 	<%= javascript_include_tag "index.js" %>
-
-
+	<%= javascript_include_tag "menu_jquery.js" %>
+	
 </body>
 </html>
